[package]
name = "oshirase"
version = "0.1.0"
authors = ["mishan88 <mishanhideaki88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde_json = "1.0.44"
config = "0.9"
rusoto_core = {version = "0.42.0", default_features = false, features = ["rustls"]}
rusoto_sns = {version = "0.42.0", default_features = false, features = ["rustls"]}
rusoto_credential = "0.42.0"
chrono = "0.4.10"
chrono-tz = "0.5.1"